# delphi-epidata

./: .bumpversion.cfg  .dockerignore  .editorconfig  .env.example  .flake8  .git-blame-ignore-revs  .gitignore  .isort.cfg  Jenkinsfile  LICENSE  README.md  TODO  _config.yml  build.js  deploy.json  index.md  jhu_islatest_fix.sql  new_endpoint_tutorial.md  package-lock.json  package.json  pyproject.toml  regions.txt  requirements.api.txt  requirements.dev.txt  requirements.lint.txt  requirements.txt  sonar-project.properties  sonar.properties  states.txt  tasks.py  test.db  test.ipynb
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/workflows/: ci.yaml  create-delphi-epidata-release.yml  create-release.yml  dependabot-assignments.yml  deploy-docs.yaml  lint.yaml  missing_signals.yaml  performance-tests-one-time.yml  performance-tests-periodic.yml  performance-tests.yml  release-helper.yml  sync-issue-to-jira.yml  sync-issue-with-jira.yml  update_gdocs_data.yml
api/: README.md  afhsb.md  cdc.md  client_libraries.md  covid_hosp.md  covidcast.md  covidcast_changelog.md  covidcast_clients.md  covidcast_geography.md  covidcast_meta.md  covidcast_signals.md  delphi.md  dengue_nowcast.md  dengue_sensors.md  ecdc_ili.md  flusurv.md  fluview.md  fluview_clinical.md  gft.md  kcdc_ili.md  meta.md  meta_afhsb.md  missing_codes.md  nidss_dengue.md  nidss_flu.md  norostat.md  nowcast.md  quidel.md  twitter.md  wiki.md
api/covidcast-signals/: _source-template.md  changehc.md  chng.md  covid-act-now.md  doctor-visits.md  fb-survey.md  ght.md  google-survey.md  google-symptoms.md  hospital-admissions.md  indicator-combination.md  jhu-csse.md  nchs-mortality.md  safegraph-inactive.md  safegraph.md  usa-facts.md
code/: delphi_epidata.R  delphi_epidata.coffee  delphi_epidata.js  delphi_epidata.py
code/client/: delphi_epidata.R  delphi_epidata.coffee  delphi_epidata.py
code/server/: api.php
dev/local/: .dockerignore  Makefile  docker-compose.yaml  epidata-refresh.sh  install.sh  install.sh   pyproject.toml  setup.cfg
devops/: Dockerfile  gunicorn_conf.py  start.sh  start_wrapper.sh
docs/: DelphiResearchGroup.md  Gemfile  README.md  _config.yml  about_delphi.md  covid_survey.md  developer_support.md  epidata_development.md  index.md  new_endpoint_tutorial.md  related_work.md  tabs_demo.md
docs/_includes/: head_custom.html
docs/api/: 01meta.md  README.md  afhsb.md  api_keys.md  cdc.md  client_libraries.md  covid_hosp.md  covid_hosp_facility.md  covid_hosp_facility_lookup.md  covidcast.md  covidcast_api_queries.md  covidcast_changelog.md  covidcast_clients.md  covidcast_geography.md  covidcast_inactive_signals.md  covidcast_licensing.md  covidcast_meta.md  covidcast_signals.md  covidcast_times.md  date_formats.md  delphi.md  delphi_research_group.md  dengue_digital_surveillance.md  dengue_nowcast.md  dengue_sensors.md  digital_surveillance_sensors.md  ecdc_ili.md  epidata_signals.md  flusurv.md  fluview.md  fluview_clinical.md  fluview_meta.md  geographic_codes.md  gft.md  ght.md  glossary.md  ili_nearby_nowcast.md  inactive_other.md  kcdc_ili.md  meta.md  (+16 more)
docs/symptom-survey/: codebook.csv  coding.md  collaboration-revision.md  contingency-codebook.csv  contingency-tables.md  data-access.md  end-of-survey.md  index.md  limitations.md  modules.md  problems.md  publications.md  server-access.md  survey-files.md  survey-utils.R  weights.md
integrations/: test_api_analytics.py  test_covid_alert.py  test_covid_alert_meta.py  test_covid_survey_county_weekly.py  test_covid_survey_hrr_daily.py  test_covid_survey_msa_daily.py  test_covidcast.py  test_covidcast_meta.py  test_delphi_epidata.py  test_deploy_syntax.py  test_fluview.py
integrations/client/: test_delphi_epidata.R  test_delphi_epidata.html  test_delphi_epidata.js  test_delphi_epidata.py  test_nowcast.py
integrations/server/: fill_data.py  test_admin.py  test_api_analytics.py  test_api_keys.py  test_cdc.py  test_covid_hosp.py  test_covidcast.py  test_covidcast_endpoints.py  test_covidcast_meta.py  test_covidcast_meta_ab.py  test_covidcast_nowcast.py  test_delphi.py  test_dengue_nowcast.py  test_dengue_sensors.py  test_differentiated_access.py  test_ecdc_ili.py  test_flusurv.py  test_fluview.py  test_fluview_clinical.py  test_fluview_meta.py  test_gft.py  test_ght.py  test_kcdc_ili.py  test_meta.py  test_meta_norostat.py  test_nidss_dengue.py  test_nidss_flu.py  test_norostat.py  test_nowcast.py  test_paho_dengue.py  test_pandas.py  test_quidel.py  test_rvdss.py  test_sensors.py  test_signal_dashboard.py  test_twitter.py  test_wiki.py
labels/: articles.txt  cities.txt  ecdc_regions.txt  flusurv_locations.txt  nidss_locations.txt  nidss_regions.txt  regions.txt
scripts/: quidelMissingness.R  report_missing_covidcast_meta.py  signal_spreadsheet_otherendpoints_updater.R  signal_spreadsheet_updater.R  updated_signal_spreadsheet.csv
src/client/: delphi_epidata.R  delphi_epidata.coffee  delphi_epidata.d.ts  delphi_epidata.js  delphi_epidata.py
src/client/packaging/pypi/: .bumpversion.cfg  .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
src/client/packaging/pypi/delphi_epidata/: __init__.py
src/common/: covidcast_row.py  covidcast_test_base.py  delphi_test_base.py  integration_test_base_class.py  logger.py
src/dbjobs/: loadmigrate  loadschema  readme.txt  runner  runner.ps1  runner.sh
src/ddl/: api_analytics.sql  api_user.sql  cdc.sql  covid_alert.sql  covid_hosp.sql  covid_hosp_schema_io.py  covid_hosp_schemadefs.yaml  covid_survey.sql  covid_survey_county_weekly.sql  covid_survey_hrr_daily.sql  covidcast.sql  covidcast_nowcast.sql  cr_signal_history_v.py  cr_signal_latest_v.py  cr_tbl_geo_dim.py  cr_tbl_signal_dim.py  cr_tbl_signal_history.py  cr_tbl_signal_latest.py  cr_tbl_signal_load.py  cr_tbl_temp_keys.py  dashboard_signal.sql  dashboard_signal_coverage.sql  dashboard_signal_status.sql  ecdc_ili.sql  fluview.sql  forecasts.sql  gft.sql  ght.sql  kcdc_ili.sql  mobility.sql  (+14 more)
symptom-survey/: coding.md  contingency-tables.md  index.md  survey-files.md  survey-utils.R  weights.md
(+533 files in other folders)
