[metadata]
name = Delphi Development
version = 0.4.6

[options]
packages =
    delphi.epidata
    delphi.epidata.acquisition
    delphi.epidata.acquisition.afhsb
    delphi.epidata.acquisition.cdcp
    delphi.epidata.acquisition.covid_hosp
    delphi.epidata.acquisition.covid_hosp.common
    delphi.epidata.acquisition.covid_hosp.facility
    delphi.epidata.acquisition.covid_hosp.state_daily
    delphi.epidata.acquisition.covid_hosp.state_timeseries
    delphi.epidata.acquisition.covidcast
    delphi.epidata.acquisition.covidcast_nowcast
    delphi.epidata.acquisition.ecdc
    delphi.epidata.acquisition.flusurv
    delphi.epidata.acquisition.fluview
    delphi.epidata.acquisition.ght
    delphi.epidata.acquisition.kcdc
    delphi.epidata.acquisition.nidss
    delphi.epidata.acquisition.norostat
    delphi.epidata.acquisition.paho
    delphi.epidata.acquisition.quidel
    delphi.epidata.acquisition.twtr
    delphi.epidata.acquisition.wiki
    delphi.epidata.client
    delphi.epidata.server
    delphi.epidata.server.covidcast_issues_migration
    delphi.epidata.server.endpoints
    delphi.epidata.server.endpoints.covidcast_utils
    delphi.epidata.server.utils
    delphi.flu_contest
    delphi.flu_contest
    delphi.flu_contest.archefilter
    delphi.flu_contest.covid
    delphi.flu_contest.epicast
    delphi.flu_contest.forecasters
    delphi.flu_contest.hosp
    delphi.flu_contest.main
    delphi.flu_contest.uploads
    delphi.flu_contest.utils
    delphi.github_deploy_repo
    delphi.github_deploy_repo.actions
    delphi.nowcast
    delphi.nowcast.experiments
    delphi.nowcast.fusion
    delphi.nowcast.obsolete
    delphi.nowcast.sensors
    delphi.nowcast.util
    delphi.operations
    delphi.operations.database_metrics
    delphi.operations.screenshots
    delphi.operations.screenshots.covidcast
    delphi.utils
    delphi.utils.geo
    delphi.utils.obsolete
    undefx.py3tester
    undefx.undef_analysis

package_dir =
    delphi.epidata = delphi/delphi-epidata/src
    delphi.flu_contest = delphi/flu-contest/src
    delphi.github_deploy_repo = delphi/github-deploy-repo/src
    delphi.nowcast = delphi/nowcast/src
    delphi.operations = delphi/operations/src
    delphi.utils = delphi/utils/src
    undefx.py3tester = undefx/py3tester/src
    undefx.undef_analysis = undefx/undef-analysis
