[metadata]
name = Delphi Development
version = 4.1.10

[options]
packages =
    delphi.epidata
    delphi.epidata.acquisition
    delphi.epidata.acquisition.cdcp
    delphi.epidata.acquisition.covid_hosp
    delphi.epidata.acquisition.covid_hosp.common
    delphi.epidata.acquisition.covid_hosp.facility
    delphi.epidata.acquisition.covid_hosp.state_daily
    delphi.epidata.acquisition.covid_hosp.state_timeseries
    delphi.epidata.acquisition.covidcast
    delphi.epidata.acquisition.covidcast_nowcast
    delphi.epidata.acquisition.ecdc
    delphi.epidata.acquisition.flusurv
    delphi.epidata.acquisition.fluview
    delphi.epidata.acquisition.ght
    delphi.epidata.acquisition.kcdc
    delphi.epidata.acquisition.nidss
    delphi.epidata.acquisition.paho
    delphi.epidata.acquisition.quidel
    delphi.epidata.acquisition.twtr
    delphi.epidata.acquisition.wiki
    delphi.epidata.client
    delphi.epidata.server
    delphi.epidata.server.admin
    delphi.epidata.server.admin.templates
    delphi.epidata.server.covidcast_issues_migration
    delphi.epidata.server.endpoints
    delphi.epidata.server.endpoints.covidcast_utils
    delphi.epidata.server.utils
    delphi.operations
    delphi.operations.database_metrics
    delphi.operations.screenshots
    delphi.operations.screenshots.covidcast
    delphi.utils
    delphi.utils.geo
    delphi.utils.obsolete

package_dir =
    delphi.epidata = delphi/delphi-epidata/src
    delphi.operations = delphi/operations/src
    delphi.utils = delphi/utils/src
