# Guide (user-friendly):
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# Specification (technical, formal):
# https://packaging.python.org/en/latest/specifications/pyproject-toml/


# Choosing a build backend:
# https://packaging.python.org/en/latest/tutorials/packaging-projects/#choosing-a-build-backend
[build-system]
# A list of packages that are needed to build your package:
requires = ["setuptools>=61.0.0"] # REQUIRED if [build-system] table is used
# The name of the Python object that frontends will use to perform the build:
build-backend = "setuptools.build_meta" # If not defined, then legacy behavior can happen.


[project]
name = "delphi_epidata" # REQUIRED, is the only field that cannot be marked as dynamic.
version = "4.1.23"
description = "A programmatic interface to Delphi's Epidata API."
readme = "README.md"
requires-python = ">=3.8"

license = { file = "LICENSE" }

authors = [{ name = "David Farrow", email = "dfarrow0@gmail.com" }]

maintainers = [
    { name = "Delphi Support", email = "delphi-support+pypi@andrew.cmu.edu" },
]

# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    # Pick your license as you wish
    "License :: OSI Approved :: MIT License",

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate you support Python 3. These classifiers are *not*
    # checked by "pip install". See instead "requires-python" key in this file.
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = ["aiohttp", "delphi-utils", "requests>=2.7.0", "tenacity"]

[project.urls]
"Homepage" = "https://github.com/cmu-delphi/delphi-epidata"
"Changelog" = "https://github.com/cmu-delphi/delphi-epidata/blob/main/src/client/packaging/pypi/CHANGELOG.md"
